--- a/login/login.phtml
+++ b/login/login.phtml
@@ -49,7 +49,7 @@
 			</div>
 
 			<footer class="box footer">
-				<p>Copyright © 2010-2015 FusionOne Co.,Ltd. All Rights Reserved.</p>
+				<p>Copyright © 2010-<?=date("Y")?> FusionOne Co.,Ltd. All Rights Reserved.</p>
 			</footer>
 		</div>
 	</body>
