--- a/insertEvent/insertEvent.phtml
+++ b/insertEvent/insertEvent.phtml
@@ -93,7 +93,7 @@
 					<p>
 					<a href="">セミナー登録画面に戻る</a>
 					 /
-					<a href="../mainMenu/mainMenu.php">メインメニューに戻る</a>
+					<a href="../eventList/eventList.php">セミナー一覧に戻る</a>
 					</p>
 				</form>
 			</div>
