設定一覧画面 ・登録、変更、削除機能を実装 ・各画面のメニューリストにリンク付け

--- a/css/design.css
+++ b/css/design.css
@@ -179,3 +179,8 @@ h1{
 #dropmenu li:hover ul li:last-child a{
 	border-radius: 0 0 3px 3px;
 }
+
+.positiontable{
+	float:left;
+	margin-left:110px;
+}
