--- a/mainMenu/mainMenu.phtml
+++ b/mainMenu/mainMenu.phtml
@@ -75,7 +75,8 @@
 		     					<li><a href="../updateUser/updateUser.php">ユーザー設定変更</a></li>
 		     					<li><a href="../insertUser/insertUser.php">ユーザー登録</a></li>
 		     					<li><a href="../eventList/eventList.php">セミナー一覧</a></li>
-	     					<li><a href="../insertEvent/insertEvent.php">セミナー登録</a></li>
+	     						<li><a href="../insertEvent/insertEvent.php">セミナー登録</a></li>
+		   						<li><a href="../managementElements/managementElements.php">各設定一覧</a></li>
 		   					</ul>
 		  				</li>
 		  				<li><a href="../settingRestTime/settingRestTime.php">休憩時間設定</a>
