--- a/managementElements/managementElements.phtml
+++ b/managementElements/managementElements.phtml
@@ -4,35 +4,12 @@
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="../css/design.css">
 		<link rel="stylesheet" href="../css/content.css">
+		<link rel="stylesheet" href="../jquery/spectrum.css">
 		<title>ユーザー設定変更画面</title>
 		<script type="text/javascript" src="../jquery/jquery-1.11.3.min.js"></script>
 		<script type="text/javascript" src="../script/logout.js"></script>
-		<script type="text/javascript" src="../jquery/spectrum.css"></script>
-		<script type="text/javascript" src="../script/spectrum.js"></script>
-		<script type="text/javascript">
-
-		$(function(){
-
-			$(".update").click(function(){
-
-				$('.execute').val($(this).data('execute'));
-
-				if (!confirm('この内容で情報を変更します。\nよろしいですか？')) {
-					return false;
-				}
-
-			});
-
-			$(".delete").click(function(){
-
-				$('.execute').val($(this).data('execute'));
-
-				if (!confirm('この情報を削除します。\nよろしいですか？')) {
-					return false;
-				}
-			});
-		});
-		</script>
+		<script type="text/javascript" src="../jquery/spectrum.js"></script>
+		<script type="text/javascript" src="../script/managementElements.js"></script>
 	</head>
 	<body>
 		<div class="container">
@@ -42,7 +19,14 @@
 
 			<div class="box width70 clearfix">
 				<div class="userInfo float-left">
-
+					<p>
+						ユーザー名 : <?php echo $_SESSION['userinfo']['name'];?> /
+						権限 : <?php if($_SESSION['userinfo']['authority'] == 2){?>
+								管理者
+							  <?php }else{?>
+							  	一般ユーザー
+							  <?php }?>
+					</p>
 				</div>
 				<div class="userInfo float-right">
 					<p><a href="../login/login.php?execute=logout" id="logoutLink">ログアウト</a></p>
@@ -69,6 +53,7 @@
 	     					<li><a href="../insertUser/insertUser.php">ユーザー登録</a></li>
 	     					<li><a href="../eventList/eventList.php">セミナー一覧</a></li>
 	     					<li><a href="../insertEvent/insertEvent.php">セミナー登録</a></li>
+	     					<li><a href="">各設定一覧</a></li>
 	   					</ul>
 	  				</li>
 	  				<li><a href="../settingRestTime/settingRestTime.php">休憩時間設定</a>
@@ -80,7 +65,7 @@
 
 			<div class="box main-container cleafix">
 				<div class="clearfix" style="padding:0 100px;">
-					<table align="center" border="2" class="float-left">
+					<table border="2" class="float-left">
 						<tr>
 							<th colspan = "6">
 							カラー 一覧
@@ -112,12 +97,29 @@
 						</tr>
 					<?php endforeach;?>
 						<tr>
-							<th colspan="3">新規登録
-							</th>
+							<th colspan="3">新規登録</th>
+						</tr>
+						<tr>
+							<form action="./managementElements.php" method="POST">
+								<td>
+									<input type="color" name="c_code">
+								</td>
+
+								<td>
+									<input type="text" name="c_name" size="7">
+								</td>
+
+								<td>
+									<center>
+										<input type="submit" value="登録" class="insert">
+										<input type="hidden" name="execute" value="c_insert">
+									</center>
+								</td>
+							</form>
 						</tr>
 					</table>
 
-					<table align="center" border="2" class="float-left">
+					<table border="2" class="positiontable">
 						<tr>
 							<th colspan = "6">
 							役割 一覧
@@ -129,12 +131,18 @@
 							<th>変更</th>
 						</tr>
 					<?php foreach($model->getPositionList() as $pos):?>
-						<tr>
-							<form action="./managementElements.php" method="POST">
+						<form action="./managementElements.php" method="POST">
+							<tr>
+							<?php if($pos["p-name"] == "講師" || $pos["p-name"] == "セミナー"){?>
 								<td>
-									<input type="text" name="p_name" size="7" value="<?=$pos["p-name"];?>">
+									<?=$pos["p-name"];?>
+									<input type="hidden" name="p_name" value="<?=$pos["p-name"];?>">
 								</td>
-
+							<?php }else{?>
+								<td>
+									<input type="text" size="7" name="p_name" value="<?=$pos["p-name"];?>">
+								</td>
+							<?php }?>
 								<td>
 									<input type="color" name="p_code" value="<?=$pos["color"];?>">
 								</td>
@@ -144,12 +152,31 @@
 									<input type="hidden" name="execute" class="execute" value="">
 									<input type="hidden" name="positionid" value="<?=$pos["positionid"];?>">
 								</td>
+							</tr>
+						</form>
+						<?php endforeach;?>
+						<tr>
+							<th colspan="3">新規登録</th>
+						</tr>
+						<tr>
+							<form action="./managementElements.php" method="POST">
+								<td>
+									<input type="text" name="p_name" size="7">
+								</td>
+
+								<td>
+									<input type="color" name="p_code">
+								</td>
+
+								<td>
+									<input type="submit" value="登録" class="insert">
+									<input type="hidden" name="execute" value="p_insert">
+								</td>
 							</form>
 						</tr>
-						<?php endforeach;?>
 					</table>
 
-					<table align="center" border="2" class="float-right">
+					<table border="2" class="float-right">
 						<tr>
 							<th colspan = "6">
 							ステータス 一覧
@@ -162,8 +189,13 @@
 						<?php foreach($model->getStatusList() as $sta):?>
 						<tr>
 							<form action="./managementElements.php" method="POST">
+							<?php if($sta["name"] == "休み"){?>
 								<td>
-									<input type="text" name="s-name" size="7" value="<?=$sta["name"]?>">
+									<?=$sta["name"]?>
+								</td>
+							<?php }else{?>
+								<td>
+									<input type="text" name="s_name" size="7" value="<?=$sta["name"]?>">
 								</td>
 
 								<td>
@@ -172,11 +204,26 @@
 									<input type="hidden" name="execute" class="execute" value="">
 									<input type="hidden" name="statusid" value="<?=$sta["statusid"];?>">
 								</td>
+							<?php }?>
 							</form>
 						</tr>
 						<?php endforeach;?>
 						<tr>
 							<th colspan="2">新規登録</th>
+						</tr>
+						<tr>
+							<form action="./managementElements.php" method="POST">
+								<td>
+									<input type="text" name="s_name" size="7">
+								</td>
+
+								<td>
+									<center>
+										<input type="submit" value="登録" class="insert">
+										<input type="hidden" name="execute" value="s_insert">
+									</center>
+								</td>
+							</form>
 						</tr>
 					</table>
 				</div>
