--- a/insertEvent/insertEvent.phtml
+++ b/insertEvent/insertEvent.phtml
@@ -54,7 +54,7 @@
 	     					<li><a href="../insertUser/insertUser.php">ユーザー登録</a></li>
 	     					<li><a href="../eventList/eventList.php">セミナー一覧</a></li>
 	     					<li><a href="">セミナー登録</a></li>
-	     					<li><a href="../managementElements/managementElements.php">各設定一覧</a></li>
+	     					<li><a href="../managementElements/managementElements.php">各種設定一覧</a></li>
 	   					</ul>
 	  				</li>
 	  				<li><a href="../settingRestTime/settingRestTime.php">休憩時間設定</a>
