--- a/personalWorkTime/personalWorkTime.phtml
+++ b/personalWorkTime/personalWorkTime.phtml
@@ -65,7 +65,7 @@ $sum = $model->getSum();
 		     					<li><a href="../insertUser/insertUser.php">ユーザー登録</a></li>
 		     					<li><a href="../eventList/eventList.php">セミナー一覧</a></li>
 	     						<li><a href="../insertEvent/insertEvent.php">セミナー登録</a></li>
-		   						<li><a href="../managementElements/managementElements.php">各設定一覧</a></li>
+		   						<li><a href="../managementElements/managementElements.php">各種設定一覧</a></li>
 		   					</ul>
 		  				</li>
 		  				<li><a href="../settingRestTime/settingRestTime.php">休憩時間設定</a>
