--- a/settingRestTime/settingRestTime.phtml
+++ b/settingRestTime/settingRestTime.phtml
@@ -87,7 +87,7 @@ $data = $model->getRestTimeData();
 	     					<li><a href="../insertUser/insertUser.php">ユーザー登録</a></li>
 	     					<li><a href="../eventList/eventList.php">セミナー一覧</a></li>
 	     					<li><a href="../insertEvent/insertEvent.php">セミナー登録</a></li>
-	   						<li><a href="../managementElements/managementElements.php">各設定一覧</a></li>
+	   						<li><a href="../managementElements/managementElements.php">各種設定一覧</a></li>
 	   					</ul>
 	  				</li>
 	  				<li><a href="settingRestTime.php">休憩時間設定</a>
