--- a/insertEvent/insertEvent.phtml
+++ b/insertEvent/insertEvent.phtml
@@ -53,7 +53,7 @@
 	     					<li><a href="../updateUser/updateUser.php">ユーザー設定変更</a></li>
 	     					<li><a href="../insertUser/insertUser.php">ユーザー登録</a></li>
 	     					<li><a href="../eventList/eventList.php">セミナー一覧</a></li>
-	     					<li><a href="">セミナー登録</a></li>
+	     					<li><a href="./insertEvent.php">セミナー登録</a></li>
 	     					<li><a href="../managementElements/managementElements.php">各種設定一覧</a></li>
 	   					</ul>
 	  				</li>
@@ -92,7 +92,7 @@
 						</tr>
 					</table>
 					<p>
-					<a href="">セミナー登録画面に戻る</a>
+					<a href="./insertEvent.php">セミナー登録画面に戻る</a>
 					 /
 					<a href="../eventList/eventList.php">セミナー一覧に戻る</a>
 					</p>
