--- a/managementElements/managementElements.phtml
+++ b/managementElements/managementElements.phtml
@@ -49,7 +49,7 @@
 	 				</li>
 	  				<li><a href="#">管理設定</a>
 	   					<ul>
-	     					<li><a href="./updateUser.php">ユーザー設定変更</a></li>
+	     					<li><a href="../updateUser/updateUser.php">ユーザー設定変更</a></li>
 	     					<li><a href="../insertUser/insertUser.php">ユーザー登録</a></li>
 	     					<li><a href="../eventList/eventList.php">セミナー一覧</a></li>
 	     					<li><a href="../insertEvent/insertEvent.php">セミナー登録</a></li>
