--- a/updateUser/updateUser.phtml
+++ b/updateUser/updateUser.phtml
@@ -8,177 +8,8 @@
 		<title>ユーザー設定変更画面</title>
 		<script type="text/javascript" src="../jquery/jquery-1.11.3.min.js"></script>
 		<script src="../jquery/jquery-ui.js"></script>
+		<script src="../script/updateUser.js"></script>
 		<script type="text/javascript" src="../script/logout.js"></script>
-		<script type="text/javascript">
-
-		$(function(){
-
-			<?php
-			$accountList = $model->getAccountList();
-			?>
-
-			//アカウント情報をjavascriptに変換して変数に格納
-			var accountList = <?php echo $model->getJsAccountList();?>;
-
-
-
-			//リスト分だけループをまわす。
-			for(var i = 0;i < accountList.length;i++){
-
-				//権限
-				$('#authority'+i).val(accountList[i]['authority']);
-
-				//active,inactive
-				$('#display'+i).val(accountList[i]['display']);
-
-				//表示色
-				$('#colorid'+i).val(accountList[i]['colorid']);
-
-			}
-
-			$(".update").click(function(){
-
-				$('.execute').val($(this).data('execute'));
-
-				//各フォームの値を変数に格納
-				var index1 = $(this).data('index'); 			 //インデックス番号
-				var accountid1 = $(this).data('accountid');		 //アカウント管理ID
-				var name1 = $(this).data('name');				 //名前
-				var userid1 = $("#userid" + index1).val();		 //ユーザーID
-				var password1 = $("#password" + index1).val();	 //パスワード
-				var authority1 = $("#authority"+index1+" option:selected").text();	 //ユーザー権限
-				var authority_val = $("#authority"+index1).val();					//ユーザー権限(value)
-				var display1 = $("#display"+index1).val();						 //表示/非表示番号(value)
-				var active1 = $("#display"+index1+" option:selected").text();	 //表示/非表示
-				var colorName1 = $("#colorid"+index1+" option:selected").text();	//表示色名
-				var color1 = $("#colorid"+index1).val();							//表示色ID
-
-				var errMsg = new Array();
-
-				if(jsTrim(userid1).length == 0){
-
-					errMsg[0] = ("ユーザー名が入力されていません！");
-					$("#userid"+index1).css("background-color","#FFB6C1");
-
-				}else if(userid1.match ( /[^0-9a-zA-Z_]+/ ) ){
-
-					errMsg[0] = "ユーザー名に不正な文字が入力されています。";
-					$("#userid"+index1).css("background-color","#FFB6C1");
-
-				}else{
-					$("#userid"+index1).css("background-color","#FFFFFF");
-
-				}
-
-				if(jsTrim(password1).length == 0){
-
-					errMsg[1] = ("パスワードが入力されていません！");
-					$("#password"+index1).css("background-color","#FFB6C1");
-
-				}else if(password1.match ( /[^0-9a-zA-Z_]+/ ) ){
-
-					errMsg[1] = "パスワードに不正な文字が入力されています。";
-					$("#password" + index1).css("background-color","#FFB6C1");
-
-				}else{
-					$("#password" + index1).css("background-color","#FFFFFF");
-
-				}
-
-				//エラーが発生していた場合、エラーメッセージをアラートする。
-				if(errMsg.length != 0){
-					alert(errMsg.join("\n"));
-					return false;
-				}
-
-				if (!confirm('この内容でユーザー情報を変更します。\nよろしいですか？')) {
-					return false;
-				}
-
-				$.ajax({
-					type: 'POST',
-					url:'',
-					data:{
-					"accountid": accountid1,
-					"userid": userid1,
-					"password": password1,
-					"authority": authority_val,
-					"display": display1,
-					"colorid" :color1,
-					"execute": "update"
-
-				},
-				success:function(data) {
-
-					//結果表示用のダイアログに文章を挿入する
-
-					//名前
-					$('#nameDisp').append(name1);
-					//$('#nameDisp').css("color",code1);
-					//ユーザーID
-					$('#useridDisp').append(userid1);
-					//パスワード
-					$('#passwordDisp').append(password1);
-					//権限
-					$('#authorityDisp').append(authority1);
-					//acitive/inactive
-					$('#displayDisp').append(active1);
-					//表示色
-					$('#colorDisp').append(colorName1);
-					//$('#colorDisp').css("color",code1);
-
-					//新たなダイアログを立ち上げる
-					jQuery( '#jquery-ui-dialog' ) . dialog( 'open' );
-
-				},
-				error:function(XMLHttpRequest, textStatus, errorThrown) {
-
-				}
-				});
-
-			});
-
-			$(".delete").click(function(){
-
-				$('.execute').val($(this).data('execute'));
-
-				if (!confirm('このユーザー情報を削除します。\nよろしいですか？')) {
-					return false;
-				}
-			});
-
-			jQuery( '#jquery-ui-dialog' ) . dialog( {
-				autoOpen: false,
-				width: 400,
-				show: 'explode',
-				hide: 'explode',
-				modal: true,
-				buttons: {
-				'閉じる': function() {
-
-				jQuery( this ).dialog( 'close' );
-				console.log("1");
-				},
-				}
-			} );
-
-			// 前後スペース削除(全角半角対応)
-
-			function jsTrim( val ) {
-
-				var ret = val;
-
-				ret = ret.replace( /^[\s]*/, "" );
-
-				ret = ret.replace( /[\s]*$/, "" );
-
-				return ret;
-
-			}
-
-
-		});
-		</script>
 	</head>
 	<body>
 		<div class="container">
@@ -236,7 +67,7 @@
 
 					<table align="center" border="2">
 						<tr>
-							<th colspan = "6">
+							<th colspan = "8">
 							ユーザー 一覧
 							</th>
 						</tr>
@@ -245,61 +76,72 @@
 							<th>ユーザーID</th>
 							<th>パスワード</th>
 							<th>権限</th>
+							<th>勤務形態</th>
 							<th>active/<br>inactive</th>
 							<th>表示色</th>
 							<th>変更/削除</th>
 						</tr>
-					<?php foreach($accountList as $num => $value):?>
+					<?php foreach($model->getAccountList() as $num => $value):?>
 						<tr>
 							<form action="" method="POST">
 								<td>
-									<font color="<?php echo $value["code"];?>">
+									<font color="<?php echo $value["code"];?>" id="name<?php echo $num;?>">
 										<?php echo $value["name"];?>
 									</font>
 								</td>
-								<td>
-									<input
-									type="text"
-									name="userid"
-									id="userid<?php echo $num;?>"
-									value="<?php echo $value["userid"];?>">
-								</td>
-								<td>
-									<input
-									type="text"
-									name="password"
-									id="password<?php echo $num;?>"
-									value="<?php echo $value["password"];?>">
-								</td>
-								<td>
-									<select name="authority" id="authority<?php echo $num;?>">
-										<option value="2">管理者</option>
-										<option value="1">一般ユーザー</option>
-									</select>
-								</td>
-								<td>
-									<select name="display" id="display<?php echo $num;?>">
-										<option value="1">active</option>
-										<option value="2">inactive</option>
-									</select>
+
+								<td id="userid<?php echo $num;?>">
+									<?php echo $value["userid"];?>
 								</td>
 
-								<td>
-									<select name="colorid" id="colorid<?php echo $num;?>">
-									<?php foreach($model->getColorList() as $col):?>
-										<option value="<?php echo $col["colorid"];?>"
-												style="color:<?php echo $col["code"];?>;">
-											<?php echo $col["c-name"];?>
-										</option>
-									<?php endforeach;?>
-									</select>
+								<td id="password<?php echo $num;?>">
+									<?php echo $value["password"];?>
+								</td>
+
+								<td id="authority<?php echo $num;?>">
+									<?php if($value["authority"] == 2){?>
+										管理者
+									<?php }else{?>
+										一般ユーザー
+									<?php }?>
+								</td>
+
+								<td id="worktype<?php echo $num;?>">
+									<?php if($value["worktype"] == 1){?>
+										常勤
+									<?php }else{?>
+										非常勤
+									<?php }?>
+								</td>
+
+								<td id="display<?php echo $num;?>">
+									<?php if($value["display"] == 1){?>
+										active
+									<?php }else{?>
+										inactive
+									<?php }?>
+								</td>
+
+								<td id="colorid<?php echo $num;?>">
+									<font color="<?php echo $value["code"];?>">
+										<?php echo $value["c-name"];?>
+									</font>
 								</td>
 
 								<td>
 									<input type="button" value="変更" class="update"
+												id="update<?php echo $num;?>"
 												data-name="<?php echo $value["name"];?>"
 												data-accountid="<?php echo $value["accountid"];?>"
-												data-execute="update" data-index="<?php echo $num;?>">
+												data-userid="<?php echo $value["userid"];?>"
+												data-password="<?php echo $value["password"];?>"
+												data-authority="<?php echo $value["authority"];?>"
+												data-worktype="<?php echo $value["worktype"];?>"
+												data-display="<?php echo $value["display"];?>"
+												data-colorid="<?php echo $value["colorid"];?>"
+												data-code="<?php echo $value["code"];?>"
+												data-execute="update"
+												data-index="<?php echo $num;?>">
 									<input type="submit" value="削除" class="delete"
 												data-execute="delete" data-index="<?php echo $num;?>">
 									<input type="hidden" name="execute" class="execute">
@@ -321,24 +163,87 @@
 			<div id="jquery-ui-dialog" title="ユーザー情報変更">
 			    <form>
 			    <fieldset>
+			    <p>ユーザー名：<span id="name"></span></p>
+				<p>
+		            <label for="jquery-ui-dialog-form-userid">ユーザーID：</label>
+		            <input type="text" name="userid" id="userid" maxlength="20">
+		        </p>
+
+		        <p>
+		            <label for="jquery-ui-dialog-form-password">パスワード：</label>
+		           	<input type="text" name="password"  id="password" maxlength="20">
+		        </p>
+
+		        <p>
+		            <label for="jquery-ui-dialog-form-authority">ユーザー権限：</label>
+		           	<select name="authority" id="authority">
+						<option value="2">管理者</option>
+						<option value="1">一般ユーザー</option>
+					</select>
+
+		        </p>
+
+		        <p>
+		            <label for="jquery-ui-dialog-form-worktype">勤務形態：<br></label>
+		           	<select name="worktype" id="worktype">
+						<option value="1">常勤</option>
+						<option value="2">非常勤</option>
+					</select>
+
+		        </p>
+
+		        <p>
+		            <label for="jquery-ui-dialog-form-authority">active/inactive：</label>
+		            <br>
+		            <select name="display" id="display">
+						<option value="1">active</option>
+						<option value="2">inactive</option>
+					</select>
+
+		        </p>
+
+		        <p>
+		            <label for="jquery-ui-dialog-form-colorid">表示色：</label>
+		            <br>
+		            <select name="colorid" id="colorid">
+						<?php foreach($model->getColorList() as $col):?>
+
+							<option value="<?php echo $col["colorid"];?>"
+							style="color:<?php echo $col["code"];?>;"
+							data-code="<?php echo $col["code"];?>">
+
+								<?php echo $col["c-name"];?>
+
+							</option>
+						<?php endforeach;?>
+					</select>
+
+		        </p>
+
+			    </fieldset>
+
+			    </form>
+			</div>
+
+			<div id="jquery-ui-dialog2" title="ユーザー情報変更">
+			    <form>
+			    <fieldset>
 			        <p>
 			        	以下のセミナー情報を変更しました
 			        </p>
 
 			        <table id="changeEventTable">
 			        	<tr>
-			        		<th class="eventTableTitle" colspan="2">
-			        			ユーザー変更情報
+			        		<th class="eventTableTitle" colspan="3">
+			        			<span id="nameDisp"></span>変更情報
 			        		</th>
 
 			        	</tr>
+
 			        	<tr>
-			        		<th>
-			        			名前
-			        		</th>
-			        		<td>
-			        			<span id="nameDisp"></span>
-			        		</td>
+			        		<th></th>
+			        		<th>変更前</th>
+			        		<th>変更後</th>
 			        	</tr>
 
 			        	<tr>
@@ -346,42 +251,74 @@
 			        			ユーザーID
 			        		</th>
 			        		<td>
+			        			<span id="oldUseridDisp"></span>
+			        		</td>
+			        		<td>
 			        			<span id="useridDisp"></span>
 			        		</td>
 			        	</tr>
+
 			        	<tr>
 			        		<th>
 			        			パスワード
 			        		</th>
 			        		<td>
+			        			<span id="oldPasswordDisp"></span>
+			        		</td>
+			        		<td>
 			        			<span id="passwordDisp"></span>
 			        		</td>
 			        	</tr>
+
 			        	<tr>
 			        		<th>
 			        			権限
 			        		</th>
 			        		<td>
+			        			<span id="oldAuthorityDisp"></span>
+			        		</td>
+			        		<td>
 			        			<span id="authorityDisp"></span>
 			        		</td>
 			        	</tr>
+
+			        	<tr>
+			        		<th>
+			        			勤務形態
+			        		</th>
+			        		<td>
+			        			<span id="oldWorktypeDisp"></span>
+			        		</td>
+			        		<td>
+			        			<span id="worktypeDisp"></span>
+			        		</td>
+			        	</tr>
+
 			        	<tr>
 			        		<th>
 			        			acitive/<br>
 			        			inactive
 			        		</th>
 			        		<td>
+			        			<span id="oldDisplayDisp"></span>
+			        		</td>
+			        		<td>
 			        			<span id="displayDisp"></span>
 			        		</td>
 			        	</tr>
+
 			        	<tr>
 			        		<th>
 			        			表示色
 			        		</th>
 			        		<td>
+			        			<span id="oldColorDisp"></span>
+			        		</td>
+			        		<td>
 			        			<span id="colorDisp"></span>
 			        		</td>
 			        	</tr>
+
 			        </table>
 
 
